--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,8 @@ nav {
 
 span {
   color: red;
+  font-size: 900;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 nav ul li {
   list-style-type: none;
